# paper-forge

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: review_and_roadmap.md  review_loop_build_plan.md
examples/bee_sleep_dance/: Makefile  project.yaml
examples/bee_sleep_dance/manuscript/: manuscript.md  manuscript_template.md
examples/bee_sleep_dance/manuscript/results/: 01_population.json  02_temporal.json
examples/bee_sleep_dance/scripts/result_units/: 01_population.py  02_temporal.py
paper_forge/: __init__.py  cli.py  compiler.py  formatters.py  interpretation.py  literals.py  provenance.py  research_questions.py  result_unit.py  validators.py
paper_forge/renderers/: __init__.py  pandoc.py
paper_forge/stats/: __init__.py  helpers.py
template/: .gitignore  AGENT.md  Makefile  project.yaml
template/manuscript/: manuscript_template.md
template/scripts/: run_all_units.sh
template/scripts/result_units/: 01_example.py  __init__.py
template/tests/: test_example.py
templates/claude/agents/: data-analyst.md  manuscript-reviewer.md
templates/claude/skills/paper-analyze/: SKILL.md
templates/claude/skills/paper-review/: SKILL.md
templates/manuscript/: research_questions.md
templates/manuscript/review/: charter.md  rubric.md
tests/: test_compiler.py  test_formatters.py  test_interpretation.py  test_literals.py  test_provenance.py  test_renderer.py  test_research_questions.py
workflows/: compile_and_review.md  draft_template.md  iterate_manuscript.md  scaffold_paper.md  write_result_unit.md
