[project]
name = "paper-forge"
version = "0.1.0"
description = "A framework for reproducible scientific paper writing from code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tim Landgraf", email = "tim@landgraf.rocks" },
]
keywords = ["scientific-writing", "reproducibility", "manuscript", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
stats = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.scripts]
paper-forge = "paper_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
